--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
     "flowbite": "^2.5.1",
+    "framer-motion": "^11.5.6",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
